--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,7 @@
 <body>
 	<nav class="navbar navbar-expand-md navbar-light bg-light">
 		<a class="navbar-brand" href="{{ url_for('index') }}">Home</a>
+		<p>{{ session['db_username'] }}</p>
 	</nav>
 
 	<div class="main_block">
