refactored to app factory

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,7 +18,7 @@
 
 <body>
 	<nav class="navbar navbar-expand-md navbar-light bg-light">
-		<a class="navbar-brand" href="{{ url_for('index') }}">Home</a>
+		<a class="navbar-brand" href="{{ url_for('auth.index') }}">Home</a>
 		<p>{{ session['db_username'] }}</p>
 	</nav>
 
