--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -14,7 +14,7 @@
 		</div>
 		<div class="mb-3">
 			{% set password_label = form.password.label(class="form-label") %}
-			{{ pasword_label }}
+			{{ password_label }}
 			{% set password_form = form.password(class="form-control") %}
 			{{ password_form }}
 		</div>
