--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,7 +19,9 @@
 <body>
 	<nav class="navbar navbar-expand-md navbar-light bg-light">
 		<a class="navbar-brand" href="{{ url_for('auth.index') }}">Home</a>
+		{% if session.get('db_username') %}
 		<p>{{ session.get('db_username') }}</p>
+		{% endif %}
 	</nav>
 
 	<div class="main_block">
