--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,6 +14,7 @@
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 
 	<title>{% block title %} {% endblock %}</title>
+	<link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='images/db_icon.ico') }}">
 </head>
 
 <body>
