--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block navbar %}{% endblock %}
+
 {% block content %}
 <div class="container mt-5">
 	<h2>Login to Database</h2>
