--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -5,6 +5,6 @@
 .main-content h4,
 .main-content h5,
 .main-content h6 {
-  font-weight: 700;
+  font-weight: 700 !important;
   /* use 600 if you want slightly lighter */
 }
