--- a/app/templates/auditor_questions.html
+++ b/app/templates/auditor_questions.html
@@ -5,32 +5,156 @@
 {% block content %}
 
 <div class="container">
-	<h2>Auditor Questions</h2>
-	<div class="accordion accordion-flush" id="main">
-		{% if items %}
-		{% for i, item in items %}
-		<div class="accordion-item">
-			<h2 class="accordion-header">
-				<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-					data-bs-target="#collapse{{ i }}" aria-expanded="false" aria-controls="collapse{{ i }}">
-					{{ item }}
-				</button>
-			</h2>
-			<div id="collapse{{ i }}" class="accordion-collapse collapse" style="">
-				<div class="accordion-body">
-					MORE INFORMATION
-				</div>
-			</div>
-		</div>
-		{% endfor %}
-		{% endif %}
+	<div class="row just-content-center">
+		<div class="col-md-10 offset-md-1">
+			<h2>Auditors Questions</h2>
+			<h5>All files come from the
+				<a class="link-offset-2 link-offest-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover"
+					href="https://apps.dese.mo.gov/DESEApplicationsSignin/ApplicationMenu">
+					DESE apps
+				</a>
+			</h5>
 
-	</div>
-	<div class="text-center">
-		<a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover"
-			href="https://sites.google.com/cpsk12.org/aid-manual/reporting/auditers-requirements?authuser=0">Manual Link</a>
+			<div class="accordion accordion-flush" id="main">
+				<div class="accordion-item">
+					<h2 class="accordion-header">
+						<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+							data-bs-target="#collapseZero" aria-expanded="false" aria-controls="collapseZero">
+							Attendance Hours Summary
+						</button>
+					</h2>
+					<div id="collapseZero" class="accordion-collapse collapse" style="">
+						<div class="accordion-body">
+							<span>
+								Core Data Collection -> Reports on left side bar ->
+								Summary Reports -> Attendance Hours
+							</span>
+						</div>
+					</div>
+				</div>
+
+				<!-- ---------------------------------- -->
+
+				<div class="accordion-item">
+					<h2 class="accordion-header">
+						<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+							data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+							Published School Calendars (Both planned and final)
+						</button>
+					</h2>
+					<div id="collapseOne" class="accordion-collapse collapse" style="">
+						<div class="accordion-body">
+							<span>
+								Shared AID Drive: Audit -> 2025 -> 2025-26 Yearly Calendar.pdf
+							</span>
+						</div>
+					</div>
+				</div>
+
+				<!-- ---------------------------------- -->
+
+				<div class="accordion-item">
+					<h2 class="accordion-header">
+						<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+							data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+							Screen 10: School Calendar List for previous year
+						</button>
+					</h2>
+					<div id="collapseTwo" class="accordion-collapse collapse" style="">
+						<div class="accordion-body">
+							<span>
+								Core Data Collection -> Reports on left side bar -> Screen print -> Calendar
+							</span>
+						</div>
+					</div>
+				</div>
+
+				<!-- ---------------------------------- -->
+
+				<div class="accordion-item">
+					<h2 class="accordion-header">
+						<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+							data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+							Screen 15: Home School/Free and Reduced Lunch for previous year
+						</button>
+					</h2>
+					<div id="collapseThree" class="accordion-collapse collapse" style="">
+						<div class="accordion-body">
+							<span>
+								Core Data Collection -> Reports on left side bar -> Screen print -> 15 Home School/Free and Reduced
+								Lunch
+							</span>
+						</div>
+					</div>
+				</div>
+
+				<!-- ---------------------------------- -->
+
+				<div class="accordion-item">
+					<h2 class="accordion-header">
+						<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+							data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+							June MOSIS Certified File
+						</button>
+					</h2>
+					<div id="collapseFour" class="accordion-collapse collapse" style="">
+						<div class="accordion-body">
+							<ol class="text-start">
+								<li>Certified file: MOSIS Data Collection System -> June Cycle -> Student Core -> Certified Trial ->
+									Download</li>
+								<li>Warning file: MOSIS Data Collection System -> June Cycle -> Student Core -> Certified Trial ->
+									Reports -> Edits Summary By Record (right side)</li>
+							</ol>
+						</div>
+					</div>
+				</div>
+
+				<!-- ---------------------------------- -->
+
+				<div class="accordion-item">
+					<h2 class="accordion-header">
+						<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+							data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+							September and January Membership Reports
+						</button>
+					</h2>
+					<div id="collapseFive" class="accordion-collapse collapse" style="">
+						<div class="accordion-body">
+							<span>
+								Core Data Collection -> Reports on left side bar -> September/January Membership Reports
+							</span>
+						</div>
+					</div>
+				</div>
+
+				<!-- ---------------------------------- -->
+
+				<div class="accordion-item">
+					<h2 class="accordion-header">
+						<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+							data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+							Documentation supporting membership and hours of attendance reporting to DESE
+						</button>
+					</h2>
+					<div id="collapseSix" class="accordion-collapse collapse" style="">
+						<div class="accordion-body">
+							<span>
+								Datasrv (shared drive) -> Audit -> 2025 -> 8.Attendance memo - FINAL.docx
+							</span>
+						</div>
+					</div>
+				</div>
+
+			</div>
+
+			<div class="container mt-3">
+				<a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover"
+					href="https://sites.google.com/cpsk12.org/aid-manual/reporting/auditers-requirements?authuser=0">Manual
+					Link</a>
+			</div>
+
+		</div>
 	</div>
 </div>
-
 
 {% endblock %}
