added link macro

--- a/app/templates/_macros/components.html
+++ b/app/templates/_macros/components.html
@@ -6,3 +6,11 @@
 	{{ label }}
 </button>
 {%- endmacro %}
+
+
+{% macro custom_link(label, link) -%}
+<a class="link-offset-2 link-offest-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover"
+	href="{{ link }}">
+	{{ label }}
+</a>
+{%- endmacro %}
