--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -47,6 +47,32 @@
 						<div class="list-group list-group-flush border rounded overflow-hidden">
 
 							<a class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+								href="{{ url_for('auth.edit_csv') }}">
+								CSV Editor<span class="text-secondary small">Edit CSVs on shared drive</span>
+							</a>
+
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+
+		<div class="col">
+			<div class="card shadow-sm preview-card">
+				<div class="card-body">
+					<div class="d-flex justify-content-between align-items-baseline mb-3">
+						<div class="option-title">Placeholder</div>
+						<span class="badge bg-primary">Simple</span>
+					</div>
+
+					<p class="text-muted small mb-3">Description</p>
+
+					<div clas="col-12 col-md-10 col-lg-9 mx-auto">
+						<div class="list-group list-group-flush border rounded overflow-hidden">
+
+							<a class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
 								href="#">
 								Placeholder<span class="text-secondary small">Placeholder</span>
 							</a>
