--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -24,6 +24,11 @@
 								Auditor Questions <span class="text-secondary small">Yearly auditor requests</span>
 							</a>
 
+							<a class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+								href="{{ url_for('auth.course_assign_validation') }}">
+								Course Assign Tools <span class="text-secondary small">Validation tools for October course assign</span>
+							</a>
+
 						</div>
 					</div>
 				</div>
