--- a/app/templates/course_assign_tools.html
+++ b/app/templates/course_assign_tools.html
@@ -5,27 +5,35 @@
 {% block title %}Course Assign Tools{% endblock %}
 
 {% block content %}
-<div class="container-fluid mt-4">
+<div class="container text-center justify-content-center">
 	<h3>Course Assign Validation Tools</h3>
-	<form method="POST" enctype="multipart/form-data">
-		{{ upload_form.csrf_token }}
-		{% set file_label = upload_form.file.label(class="form-label") %}
-		{{ file_label }}
-		{% set file_form = upload_form.file(class="form-control") %}
-		{{ file_form }}
-		{% set submit_button = upload_form.submit(class="btn btn-primary") %}
-		{{ submit_button }}
-	</form>
+	<div class="row">
+		<form method="POST" enctype="multipart/form-data">
+			{{ upload_form.csrf_token }}
+			{% set file_label = upload_form.file.label(class="form-label") %}
+			{{ file_label }}
+			{% set file_form = upload_form.file(class="form-control") %}
+			{{ file_form }}
+			{% set submit_button = upload_form.submit(class="btn btn-primary mt-2") %}
+			{{ submit_button }}
+		</form>
+	</div>
 	<!-- <form method="POST" -->
-	{% for tool in tool_forms %}
-	<form method="POST" class="d-inline" action="{{ url_for('auth.course_assign_validation') }}">
-		{{ tool.form.hidden_tag() }}
-		<button type="submit" name="{{ tool.key }}" class="form-control">
-			{{ tool.label }}
-		</button>
-	</form>
-	{% endfor %}
+	<div class="row">
+		{% for tool in tool_forms %}
+		<div class="col-4 align-self-center mt-2">
+			<form method="POST" class="d-inline" action="{{ url_for('auth.course_assign_validation') }}">
+				{{ tool.form.hidden_tag() }}
+				<button type="submit" name="{{ tool.key }}" class="form-control">
+					{{ tool.label }}
+				</button>
+			</form>
+		</div>
+		{% endfor %}
+	</div>
 </div>
+
+
 
 <script nonce={{ csp_nonce }}>
 </script>
